# tuba-firmware

./: .gitignore  CMakeLists.txt  CONSOLE_QUICK_REFERENCE.md  DIVE_SEQUENCE.md  HARDWARE_PINOUT.md  HARDWARE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_AP_MODE.md  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  README_WIFI_CONSOLE.md  WIFI_AP_MODE_IMPLEMENTATION.md  WIFI_AP_MODE_QUICK_START.md  WIFI_AP_MODE_READY.md  WIFI_AP_MODE_VISUAL_GUIDE.md  WIFI_CONFIG_CHECKLIST.md  WIFI_CONSOLE_README.md  WIFI_CREDENTIALS_SETUP.md  build.sh  current_error.txt  gen_build_info.sh  gen_version.sh  ota_server.py  ota_update.sh  prj.conf  sysbuild.conf
boards/: esp32_devkitc.overlay  esp32_devkitc_procpu.overlay  rpi_pico.overlay
child_image/: CMakeLists.txt
include/: app_events.h  app_limits.h  app_params.h  app_print.h  build_info.h  deploy.h  dual_print.h  hw_bmp180.h  hw_gps.h  hw_hmc6343.h  hw_limit_switches.h  hw_motors.h  hw_ms5837.h  hw_pump.h  net_console.h  ota_simple.h  ota_update.h  ui_menu.h  version.h
src/: app_params.c  app_print.c  console_mirror.c  deploy.c  dual_print.c  hw_bmp180.c  hw_bmp180.c.disabled  hw_gps.c  hw_gps.c.disabled  hw_hmc6343.c  hw_limit_switches.c  hw_motors.c  hw_ms5837.c  hw_ms5837.c.disabled  hw_pump.c  main.c  net_console.c  ota_simple.c  ota_update.c  ui_menu.c
